# phd2client

./: .gitignore  LICENSE  README.md
cs/PHD2Client/: PHD2ClientSample.csproj  SampleClient.cs
cs/PHD2Client/Properties/: AssemblyInfo.cs
cs/guider/: GuiderImpl.cs  guider.cs  guider.csproj  guider.sln
cs/guider/Properties/: AssemblyInfo.cs
cxx/: .gitignore  Makefile  guider.cpp  guider.h  phd2client.cpp
python/: .gitignore  CHANGELOG.md  LICENSE  README.md  guider.py  phd2client.py  pyproject.toml
python/examples/: capture-single-frame.py  guide-and-settle.py  requirements.txt
python/src/phd2client/: guider.py
