[project]
name = "phd2client"
version = "0.3.0"
description = "PHD2 event server API client"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Andy Galasso", email = "andy.galasso@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/agalasso/phd2client/tree/master/python"
Documentation = "https://github.com/OpenPHDGuiding/phd2/wiki/EventMonitoring"
Repository = "https://github.com/agalasso/phd2client"
Issues = "https://github.com/agalasso/phd2client/issues"
Changelog = "https://github.com/agalasso/phd2client/blob/master/python/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.7.8,<0.8"]
build-backend = "uv_build"
